--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Testing Webhooks
+<!DOCTYPE html>
+<html>
+    <head>
+        <!-- Tab Styling -->
+		<title>Speeds '24</title>
+        <link rel="icon" href="./img/logo.png">
+
+        <!-- Responsive Design Tag -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+		<!-- Page Styling -->
+		<script src="https://kit.fontawesome.com/7daaf9098f.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./style.css">
+    </head>
+    <body>
+        <ul>
+            <li><a class="active" href="./index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="./events.html"><i class="fas fa-calendar-days"></i> Events</a></li>
+        </ul>
+    </body>
+</html>
