--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- Tab Styling -->
-		<title>Speeds '24</title>
+		<title>Speeds '24 - Home</title>
         <link rel="icon" href="./img/logo.png">
 
         <!-- Responsive Design Tag -->
