--- a/events.html
+++ b/events.html
@@ -10,11 +10,8 @@
 
 		<!-- Page Styling -->
 		<script src="https://kit.fontawesome.com/7daaf9098f.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./events-style.css">
-
-        <!-- Page Functionality -->
-        <script src="events.js"></script>
-
+        <link rel="stylesheet" href="./events-style.css">#
+        
     </head>
     <body>
         <ul>
@@ -82,4 +79,5 @@
         <div class="event-info-container">
         </div>
     </body>
+    <script src="events.js"></script>
 </html>
