--- a/events.html
+++ b/events.html
@@ -10,8 +10,8 @@
 
 		<!-- Page Styling -->
 		<script src="https://kit.fontawesome.com/7daaf9098f.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./events-style.css">#
-        
+        <link rel="stylesheet" href="./events-style.css">
+
     </head>
     <body>
         <ul>
@@ -76,7 +76,7 @@
                 </button>
             </div>
         </div>
-        <div class="event-info-container">
+        <div id="event-info-container">
         </div>
     </body>
     <script src="events.js"></script>
