--- a/events.html
+++ b/events.html
@@ -77,6 +77,7 @@
             </div>
         </div>
         <div id="event-info-container">
+            <p>Select an event to get started!</p>
         </div>
     </body>
     <script src="events.js"></script>
