--- a/events.html
+++ b/events.html
@@ -20,7 +20,7 @@
         </ul>
         <div class="event-tiles-container">
             <div class="col-1-tiles">
-                <button href="./?eventID=obs-swim-200" class="event-tile" id="obs-swim-200">
+                <button onclick="loadEventContent('./event-info/obs-swim-200.html')" class="event-tile" id="obs-swim-200">
                     <p>Obstacle Swim<br>200m</p>
                 </button>
                 <button class="event-tile" id="obs-swim-100">
