--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a class="nav-float-left nav-element"                           id="blgc-logo"      href="./"><img src="./img/logo.png" alt="BLGC Logo"></a></li>
                 <li><a class="nav-float-left nav-element"                           id="blgc-text"      href="./">Bournemouth Lifeguard Corps</a></li>
 
-                <li><a class="nav-float-right nav-element"                          id="cta-donate"     href="https://www.paypal.com/fundraiser/hub">Donate</a></li>
+                <li><a class="nav-float-right nav-element"                          id="cta-donate"     href="https://www.paypal.com/fundraiser/hub">Donate Test</a></li>
 
                 <li><a class="nav-float-right nav-element nav-hoverable nav-hidden" id="hamburger-menu">                     <i class="fa-solid fa-bars"></i></a></li>
 
