--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="carousel-text-container">
                     <div class="carousel-text" id="we-are">We Are</div>
                     <div class="carousel-text" id="bournemouth-lifeguard-corps">Bournemouth Lifeguard Corps</div>
-                    <div class="carousel-text" id="v">- Specialist Equipment -</div>
+                    <div class="carousel-text" id="carousel-text">- Specialist Equipment -</div>
                     <div class="carousel-text" id="learn-more"><button>Learn More</button></div>
                 </div>
                 <img src="./img/carousel-3.jpg">
@@ -85,6 +85,7 @@
                     <div class="carousel-text" id="bournemouth-lifeguard-corps">Bournemouth Lifeguard Corps</div>
                     <div class="carousel-text" id="carousel-text">- Expert Instructors -</div>
                     <div class="carousel-text" id="learn-more"><button>Learn More</button></div>
+                </div>
                 <img src="./img/carousel-5.jpg">
             </div>
             <div class="carousel-item fade">
@@ -105,28 +106,21 @@
                 </div>
                 <img src="./img/carousel-7.jpg">
             </div>
-            <a class="prev" onclick="plusSlides(-1)">❮</a>
-            <a class="next" onclick="plusSlides(1)">❯</a>
         </div>
         <script>
-            let slideIndex = 1;
-            showSlides(slideIndex);
+            let slideIndex = 0;
+            showSlides();
 
-            function plusSlides(n) {
-                showSlides(slideIndex += n);
-            }
-            function currentSlide(n) {
-                showSlides(slideIndex = n);
-            }
-            function showSlides(n) {
+            function showSlides() {
                 let i;
                 let slides = document.getElementsByClassName("carousel-item");
-                if (n > slides.length) { slideIndex = 1 }
-                if (n < 1) { slideIndex = slides.length }
                 for (i = 0; i < slides.length; i++) {
-                    slides[i].style.display = "none";
+                    slides[i].style.display = "none";  
                 }
-                slides[slideIndex - 1].style.display = "block";
+                slideIndex++;
+                if (slideIndex > slides.length) {slideIndex = 1}    
+                slides[slideIndex-1].style.display = "block";  
+                setTimeout(showSlides, 5000); // Change image every 5 seconds
             }
         </script>
         <div class="what-we-do-container">
