--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
         <nav>
             <ul class="nav-element-list">
                 <li><a class="nav-float-left nav-element"                           id="blgc-logo"      href="./"><img src="./img/logo.png" alt="BLGC Logo"></a></li>
-                <li><a class="nav-float-left nav-element"                           id="blgc-text"      href="./">Bournemouth Lifeguard Corps</a></li>
+                <li><a class="nav-float-left nav-element"                           id="blgc-text"      href="./">Bournemouth<br>Lifeguard Corps</a></li>
 
                 <li><a class="nav-float-right nav-element"                          id="cta-donate"     href="https://www.paypal.com/fundraiser/hub">Donate</a></li>
 
                 <li><a class="nav-float-right nav-element nav-hoverable nav-hidden" id="hamburger-menu">                     <i class="fa-solid fa-bars"></i></a></li>
+                <li><a class="nav-float-right nav-element nav-hoverable nav-hidden" id="members-page-icon"   href="./members">    <i class="fa-solid fa-user"></i></a></li>
 
                 <li><a class="nav-float-right nav-element nav-hoverable nav-hidden" id="members-page"   href="./members">    <i class="fa-solid fa-user"></i> Members Page</a></li>
                 <li><a class="nav-float-right nav-element nav-hoverable nav-hidden" id="contact"        href="./contact">    <i class="fa-solid fa-phone"></i> Contact</a></li>
