--- a/index.html
+++ b/index.html
@@ -167,39 +167,80 @@
                 <button class="learn-more">Learn More</button>
             </div>
         </div>
+        <h1 id="nae-text">News & Events</h1>
         <div class="news-events">
-            <div id="news">
+            <div id="news" class="nae-col">
                 <h1>Development Begins</h1>
                 <p>News</p>
                 <img src="./img/development-begins.jpg">
-                <p>Development has finally begun on our clus new facility at Josephs steps...</p>
-                <button>Read More</button>
+                <p>Development has finally begun on our club's new facility at Josephs steps. After moving to the facility in 2020...</p>
+                <button class="learn-more">Read More</button>
             </div>
-            <div id="event">
+            <div id="event" class="nae-col">
                 <h1>Speeds '24</h1>
-                <p>Event</p>
-                <p>12-13th March 2024</p>
+                <p>Event • 12-13th March 2024</p>
                 <img src="./img/speeds-24.jfif">
                 <p>Speeds '24 will be helf at the Sandwell Aquatics Cente in Birmingham. For more....</p>
-                <button>Read More</button>
+                <button class="learn-more">Read More</button>
             </div>
         </div>
         <div class="contact-form">
-            <h1>Contact Us</h1>
-            <p>Prefix</p>
-            <input />
-            <p>First Name</p>
-            <input />
-            <p>Last Name</p>
-            <input />
-            <p>Email Address</p>
-            <input />
-            <p>Subject</p>
-            <input />
-            <p>Message</p>
-            <input />
-            <button>Submit</button>
-            <img src="./img/carousel-1.jpg">
+            <div class="contact-us-col" id="contact-us-col-1">
+                <h1 id="contact-us-text">Contact Us</h1>
+                <p>Please fill out the form below and your query will be passed to the relevant committee member</p>
+                <form action="contact-us-submit" method="post">
+                    <div class="row-1">
+                        <p class="row-1-element">Title</p>
+                        <p class="row-1-element">First Name</p>
+                        <p class="row-1-element">Last Name</p>
+                    </div>
+                    <div class="row-2">
+                        <select class="row-2-element input" id="prefix">
+                            <option value="none">None</option>
+                            <option value="mr">Mr</option>
+                            <option value="mrs">Mrs</option>
+                            <option value="ms">Ms</option>
+                            <option value="miss">Miss</option>
+                            <option value="dr">Dr</option>
+                        </select>
+                        <input class="row-2-element input" type="text" id="first-name" required>
+                        <input class="row-2-elemen input" type="text" id="last-name" required>
+                    </div>
+                    <div class="row-3">
+                        <p class="row-3-element">Email Address</p>
+                        <p class="row-3-element">Subject</p>
+                    </div>
+                    <div class="row-4">
+                        <input class="row-4-element input" type="email" id="email-address" required>
+                        <select class="row-4-element input" id="subject">
+                            <option value="general" selected>General</option>
+                            <option value="adults">Adults & Masters (18+)</option>
+                            <option value="cadets">Cadets (13-18)</option>
+                            <option value="rookies">Rookies (U13)</option>
+                            <option value="irb">IRB</option>
+                            <option value="beach">Beach Training</option>
+                            <option value="pool">Pool Training</option>
+                            <option value="competitions">Competitions</option>
+                            <option value="events">Event Cover</option>
+                            <option value="fundraising">Fundraising</option>
+                            <option value="publicity">Publicity</option>
+                            <option value="safeguarding">Safeguarding</option>
+                        </select>
+                    </div>
+                    <div class="row-5">
+                        <p class="row-5-element">Message</p>
+                    </div>
+                    <div class="row-6">
+                        <textarea class="row-6-element input" type="text" id="message" required></textarea>
+                    </div>
+                    <div class="row-7">
+                        <input class="row-7-element" type="submit" id="submit" value="Submit">
+                    </div>
+                </form>
+            </div>
+            <div class="contact-us-col" id="contact-us-col-2">
+                <img src="./img/carousel-6.jpg">
+            </div>
         </div>
         <div class="footer">
             <img src="./img/logo.png" alt="BLGC Logo">
