--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@
                 <img src="./img/carousel-6.jpg">
             </div>
         </div>
-        <div class="footer">
+        <div class="footer-container">
             <img src="./img/logo.png" alt="BLGC Logo">
-            <p>Bournemouth Lifegaurd Corps</p>
+            <p>Bournemouth Lifeguard Corps</p>
             <p>Bournemouth Lifeguard Corps is a charity registered in England and Wales. Registered Charity number: 1166158. Registered address: C/O BH Live Active Stokewood, Stoke Wood Rd, Bournemouth BH3 7ND</p>
-            <p>(c) BLGC 2023</p>
+            <p>© BLGC 2023 | Powered by <a href="https://github.com/The-Iceburg">TheIceburg</a></p>
             <a><i class="fa-brands fa-instagram"></i></a>
             <a><i class="fa-brands fa-facebook"></i></a>
             <a><i class="fa-brands fa-youtube"></i></a>
