--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </div>
             <div id="event" class="nae-col">
                 <h1>Speeds '24</h1>
-                <p>Event • 12-13th March 2024</p>
+                <p>Event | 12-13th March 2024</p>
                 <img src="./img/speeds-24.jfif">
                 <p>Speeds '24 will be helf at the Sandwell Aquatics Cente in Birmingham. For more....</p>
                 <button class="learn-more">Read More</button>
