--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="carousel-text" id="we-are">We Are</div>
                     <div class="carousel-text" id="bournemouth-lifeguard-corps">Bournemouth Lifeguard Corps</div>
                     <div class="carousel-text" id="carousel-text">- Saving Lives Since 1965! -</div>
-                    <div class="carousel-text" id="learn-more-button"><button>Learn More</button></div>
+                    <div class="carousel-text" id="learn-more-button"><a href="./about-us">Learn More</a></div>
                 </div>
                 <img src="./img/carousel-1.jpg">
             </div>
@@ -58,7 +58,7 @@
                     <div class="carousel-text" id="we-are">We Are</div>
                     <div class="carousel-text" id="bournemouth-lifeguard-corps">Bournemouth Lifeguard Corps</div>
                     <div class="carousel-text" id="carousel-text">- Always Ready, Always Prepared -</div>
-                    <div class="carousel-text" id="learn-more"><button>Learn More</button></div>
+                    <div class="carousel-text" id="learn-more-button"><a href="./about-us">Learn More</a></div>
                 </div>
                 <img src="./img/carousel-2.jpg">
             </div>
@@ -67,7 +67,7 @@
                     <div class="carousel-text" id="we-are">We Are</div>
                     <div class="carousel-text" id="bournemouth-lifeguard-corps">Bournemouth Lifeguard Corps</div>
                     <div class="carousel-text" id="carousel-text">- Specialist Equipment -</div>
-                    <div class="carousel-text" id="learn-more"><button>Learn More</button></div>
+                    <div class="carousel-text" id="learn-more-button"><a href="./about-us">Learn More</a></div>
                 </div>
                 <img src="./img/carousel-3.jpg">
             </div>
@@ -76,7 +76,7 @@
                     <div class="carousel-text" id="we-are">We Are</div>
                     <div class="carousel-text" id="bournemouth-lifeguard-corps">Bournemouth Lifeguard Corps</div>
                     <div class="carousel-text" id="carousel-text">- Precise Practice -</div>
-                    <div class="carousel-text" id="learn-more"><button>Learn More</button></div>
+                    <div class="carousel-text" id="learn-more-button"><a href="./about-us">Learn More</a></div>
                 </div>
                 <img src="./img/carousel-4.jpeg">
             </div>
@@ -85,7 +85,7 @@
                     <div class="carousel-text" id="we-are">We Are</div>
                     <div class="carousel-text" id="bournemouth-lifeguard-corps">Bournemouth Lifeguard Corps</div>
                     <div class="carousel-text" id="carousel-text">- Expert Instructors -</div>
-                    <div class="carousel-text" id="learn-more"><button>Learn More</button></div>
+                    <div class="carousel-text" id="learn-more-button"><a href="./about-us">Learn More</a></div>
                 </div>
                 <img src="./img/carousel-5.jpg">
             </div>
@@ -94,7 +94,7 @@
                     <div class="carousel-text" id="we-are">We Are</div>
                     <div class="carousel-text" id="bournemouth-lifeguard-corps">Bournemouth Lifeguard Corps</div>
                     <div class="carousel-text" id="carousel-text">- Looking Professional -</div>
-                    <div class="carousel-text" id="learn-more"><button>Learn More</button></div>
+                    <div class="carousel-text" id="learn-more-button"><a href="./about-us">Learn More</a></div>
                 </div>
                 <img src="./img/carousel-6.jpg">
             </div>
@@ -103,7 +103,7 @@
                     <div class="carousel-text" id="we-are">We Are</div>
                     <div class="carousel-text" id="bournemouth-lifeguard-corps">Bournemouth Lifeguard Corps</div>
                     <div class="carousel-text" id="carousel-text">- Sharing and Learning with Other Clubs -</div>
-                    <div class="carousel-text" id="learn-more"><button>Learn More</button></div>
+                    <div class="carousel-text" id="learn-more-button"><a href="./about-us">Learn More</a></div>
                 </div>
                 <img src="./img/carousel-7.jpg">
             </div>
@@ -135,7 +135,7 @@
                 <h3 class="what-we-do-tile-head">Beach Training</h3>
                 <img src="./img/beach-training.jpeg">
                 <p class="what-we-do-tile-desc">We train regularly throughout the summer months with all our members having access to multiple sessions a week in which we teach a variety of skills. This is all based at our beach based Club HQ @ Joseph Steps, Bournemouth. We also run winter training for our very keen adult members who each Sunday brave the cold water to keep fit.</p>
-                <button class="learn-more">Learn More</button>
+                <a class="learn-more" href="./what-we-do/beach-training">Learn More</a>
             </div>
 
             <!-- Pool Training - Rookies training in the pool - brief description - learn more button -->
@@ -144,7 +144,7 @@
                 <h3 class="what-we-do-tile-head">Pool Training</h3>
                 <img src="./img/pool-training.jpeg">
                 <p class="what-we-do-tile-desc">As a club we train in a local swimming pool from September to July every year only stopping over Christmas and Easter. We train on Friday's with sessions starting at 19:30pm and finishing at 22:00pm. We cater for ages 8 years old and up. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet unde tenetur quidem rem veniam.</p>
-                <button class="learn-more">Learn More</button>
+                <a class="learn-more" href="./what-we-do/pool-training">Learn More</a>
             </div>
 
             <!-- IRB Training - IRB Closeup - brief description - learn more button -->
@@ -153,7 +153,7 @@
                 <h3 class="what-we-do-tile-head">IRB Training</h3>
                 <img src="./img/irb-training.jpg">
                 <p class="what-we-do-tile-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores facilis, ipsam ad velit doloribus veniam labore est corporis, aliquid quae illo, odit excepturi ea explicabo. Obcaecati earum quidem expedita ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, ullam minima. Praesentium quos dicta, tenetur maxime Lorem.</p>
-                <button class="learn-more">Learn More</button>
+                <a class="learn-more" href="./what-we-do/irb-training">Learn More</a>
             </div>
 
         </div>
@@ -164,7 +164,7 @@
             <div id="about-us-col-2">
                 <h1>About Us</h1>
                 <p>Bournemouth Lifeguard Corps was founded in 1965, moved to Durley Chine in 1967, became a registered charity in 2016 and moved from Durley Chine to Jospeh Steps in 2020. We are affiliated with the Royal Lifesaving Society (RLSS) who are the UK’s leading provider of water safety and drowning prevention education and Surf Lifesaving Great Britain (SLSGB) whose aim is to help make our beaches safer and more enjoyable places for everyone. We also work closely with the Royal National Lifeboat Institute (RNLI), working professionally alongside them during major events such as the Bournemouth Air Festival and British Heart Foundation Pier to Pier Swim, for which we provide water safety cover.</p>
-                <button class="learn-more">Learn More</button>
+                <a class="learn-more" href="./about-us">Learn More</a>
             </div>
         </div>
         <h1 id="nae-text">News & Events</h1>
@@ -174,14 +174,14 @@
                 <p>News</p>
                 <img src="./img/development-begins.jpg">
                 <p>Development has finally begun on our club's new facility at Josephs steps. After moving to the facility in 2020...</p>
-                <button class="learn-more">Read More</button>
+                <a class="learn-more" href="./news/article?id=001">Read More</a>
             </div>
             <div id="event" class="nae-col">
                 <h1>Speeds '24</h1>
                 <p>Event | 12-13th March 2024</p>
                 <img src="./img/speeds-24.jfif">
                 <p>Speeds '24 will be helf at the Sandwell Aquatics Cente in Birmingham. For more....</p>
-                <button class="learn-more">Read More</button>
+                <a class="learn-more" href="./event/article?id=001">Read More</a>
             </div>
         </div>
         <div class="contact-form">
@@ -247,28 +247,28 @@
             <p>Bournemouth Lifeguard Corps</p>
             <p>Bournemouth Lifeguard Corps is a charity registered in England and Wales. Registered Charity number: 1166158. Registered address: C/O BH Live Active Stokewood, Stoke Wood Rd, Bournemouth BH3 7ND</p>
             <p>© BLGC 2023 | Powered by <a href="https://github.com/The-Iceburg">TheIceburg</a></p>
-            <a><i class="fa-brands fa-instagram"></i></a>
-            <a><i class="fa-brands fa-facebook"></i></a>
-            <a><i class="fa-brands fa-youtube"></i></a>
-            <a><i class="fa-brands fa-x-twitter"></i></a>
-            <button>Donate Here</button>
-            <p>What we do</p>
+            <a href="https://www.instagram.com/blgc_official/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/bournemouthlifeguards/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.youtube.com/channel/UCCxtDBfImbV32PS7xtLJz_A"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://twitter.com/blgc_official"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.paypal.com/fundraiser/hub">Donate Here</a>
+            <a href="./what-we-do/">What we do</a>
             <ul>
-                <li>Beach Training</li>
-                <li>Pool Training</li>
-                <li>IRB Training</li>
-                <li>Competitions</li>
-                <li>Events</li>
+                <li><a href="./what-we-do/beach-training">Beach Training</a></li>
+                <li><a href="./what-we-do/pool-training">Pool Training</a></li>
+                <li><a href="./what-we-do/irb-training">IRB Training</a></li>
+                <li><a href="./what-we-do/competitions">Competitions</a></li>
+                <li><a href="./what-we-do/events">Events</a></li>
             </ul>
-            <p>About Us</p>
+            <a href="./about-us/">About Us</a>
             <ul>
-                <li>Our Past</li>
-                <li>Our Future</li>
+                <li><a href="./about-us/our-past">Our Past</a></li>
+                <li><a href="./about-us/our-future">Our Future</a></li>
             </ul>
-            <p>News + Events</p>
+            <p>News + Events</a>
             <ul>
-                <li>Development Begins</li>
-                <li>Speeds '24</li>
+                <li><a href="./news/article?id=001">Development Begins</a></li>
+                <li><a href="./event/article?id=001">Speeds '24</a></li>
             </ul>
         </div>
     </body>
