--- a/index.html
+++ b/index.html
@@ -243,33 +243,58 @@
             </div>
         </div>
         <div class="footer-container">
-            <img src="./img/logo.png" alt="BLGC Logo">
-            <p>Bournemouth Lifeguard Corps</p>
-            <p>Bournemouth Lifeguard Corps is a charity registered in England and Wales. Registered Charity number: 1166158. Registered address: C/O BH Live Active Stokewood, Stoke Wood Rd, Bournemouth BH3 7ND</p>
-            <p>© BLGC 2023 | Powered by <a href="https://github.com/The-Iceburg">TheIceburg</a></p>
-            <a href="https://www.instagram.com/blgc_official/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.facebook.com/bournemouthlifeguards/"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.youtube.com/channel/UCCxtDBfImbV32PS7xtLJz_A"><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://twitter.com/blgc_official"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="https://www.paypal.com/fundraiser/hub">Donate Here</a>
-            <a href="./what-we-do/">What we do</a>
-            <ul>
-                <li><a href="./what-we-do/beach-training">Beach Training</a></li>
-                <li><a href="./what-we-do/pool-training">Pool Training</a></li>
-                <li><a href="./what-we-do/irb-training">IRB Training</a></li>
-                <li><a href="./what-we-do/competitions">Competitions</a></li>
-                <li><a href="./what-we-do/events">Events</a></li>
-            </ul>
-            <a href="./about-us/">About Us</a>
-            <ul>
-                <li><a href="./about-us/our-past">Our Past</a></li>
-                <li><a href="./about-us/our-future">Our Future</a></li>
-            </ul>
-            <p>News + Events</a>
-            <ul>
-                <li><a href="./news/article?id=001">Development Begins</a></li>
-                <li><a href="./event/article?id=001">Speeds '24</a></li>
-            </ul>
+            <div class="footer-col-1">
+                <div class="logo-and-text-container">
+                    <img id="logo-footer" src="./img/logo.png" alt="BLGC Logo">
+                    <div class="footer-head"><p id="logo-text-footer">Bournemouth Lifeguard Corps</p></div>
+                </div>
+                <p>Bournemouth Lifeguard Corps is a charity registered in England and Wales. Registered Charity number: 1166158. Registered address: C/O BH Live Active Stokewood, Stoke Wood Rd, Bournemouth BH3 7ND</p>
+                <p><i class="fa fa-copyright"></i> BLGC 2023 | Powered by <a href="https://github.com/The-Iceburg">TheIceburg</a></p>
+            </div>
+            <div class="footer-col-2">
+                <a href="https://www.instagram.com/blgc_official/"><i class="fa-brands fa-instagram fa-2xl"></i></a><br>
+                <a href="https://www.facebook.com/bournemouthlifeguards/"><i class="fa-brands fa-facebook fa-2xl"></i></a><br>
+                <a href="https://www.youtube.com/channel/UCCxtDBfImbV32PS7xtLJz_A"><i class="fa-brands fa-youtube fa-2xl"></i></a><br>
+                <a href="https://twitter.com/blgc_official"><i class="fa-brands fa-x-twitter fa-2xl"></i></a>
+            </div>
+            <div class="footer-col-3">
+                <div>
+                    <div class="footer-head"><a href="./what-we-do/">What we do</a></div>
+                    <ul>
+                        <li><a href="./what-we-do/beach-training">Beach Training</a></li>
+                        <li><a href="./what-we-do/pool-training">Pool Training</a></li>
+                        <li><a href="./what-we-do/irb-training">IRB Training</a></li>
+                        <li><a href="./what-we-do/competitions">Competitions</a></li>
+                        <li><a href="./what-we-do/events">Events</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <div class="footer-head"><a href="./about-us/">About Us</a></div>
+                    <ul>
+                        <li><a href="./about-us/our-past">Our Past</a></li>
+                        <li><a href="./about-us/our-future">Our Future</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <div class="footer-head"><a>News + Events</a></div>
+                    <ul>
+                        <li><a href="./news/article?id=001">Development Begins</a></li>
+                        <li><a href="./event/article?id=001">Speeds '24</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <div class="footer-head"><a>Members Page</a></div>
+                    <ul>
+                        <li><a href="./members/membership-form">Membership Form</a></li>
+                        <li><a href="./members/annual-membership-payments">Annual Membership Payment</a></li>
+                        <li><a href="./members/out-team">Our Team</a></li>
+                        <li><a href="./members/members-shop">Members Shop</a></li>
+                        <li><a href="./members/risk-assessment">Risk Assessment</a></li>
+                        <li><a href="./members/par-q">PAR-Q</a></li>
+                        <li><a href="./members/covid-19-regulations">Covid-19 Regulations</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </body>
 </html>
